hphp/hack/test/typecheck/is_expression/invalid_hint_class_with_generics2.php.exp
File "invalid_hint_class_with_generics2.php", line 9, characters 5-15:
  C<int, Tb#2, Tc#2>
  where Tc#2 as string
File "invalid_hint_class_with_generics2.php", line 6, characters 13-24:
The "is" operator should not be used with a type with generics, because generics are erased at runtime (Typing[4199])
